<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_greet">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Football Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="my_app">CAPSTONE: MY OWN APP</string>
</resources>
