<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffe5ecf3"
    android:id="@+id/background">

    <TextView
        android:text="@string/app_greet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="27sp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:textColor="#ff696969" />

    <Button
        style="@style/buttonPreset"
        android:onClick="sendMessageB"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/textView" />

    <Button
        style="@style/buttonPreset"
        android:onClick="sendMessageB2"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_below="@+id/button" />

    <Button
        style="@style/buttonPreset"
        android:onClick="sendMessageB3"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_below="@+id/button2" />

    <Button
        style="@style/buttonPreset"
        android:onClick="sendMessageB4"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_below="@+id/button3" />

    <Button
        style="@style/buttonPreset"
        android:onClick="sendMessageB5"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4" />

    <Button
        style="@style/buttonPreset"
        android:onClick="sendMessageB6"
        android:text="@string/my_app"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:background="#ffff162d" />

</RelativeLayout>
